hw6 scrollbar fix

--- a/hw6/css/hw6.css
+++ b/hw6/css/hw6.css
@@ -1,6 +1,7 @@
 body {
 	width: 100%;
 	height: 100%;
+	overflow-x: hidden;
 }
 
 div {
@@ -11,7 +12,7 @@ table {
 	display: block;
 	max-height: 40em;
 	max-width: 90%;
-	overflow: scroll;
+	overflow: auto;
 	border-collapse: collapse;
 }
 
